# wenshi-assitant

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ReviewMessage.tsx  Sidebar.tsx  SourcePanel.tsx
prompts/: style_academic.txt  style_blog.txt  style_storytelling.txt  system_default.txt  system_review.txt
scripts/: convert_gu_hongming.py  convert_tongjian.py
src/history_rag/: __main__.py  api.py  cli.py  config.py  web.py
src/history_rag/embeddings/: embedder.py
src/history_rag/generation/: claim_extractor.py  context_rewriter.py  highlight.py  llm.py  prompts.py  query_rewriter.py  relevance_filter.py
src/history_rag/ingest/: chunker.py  downloader.py  parser.py
src/history_rag/retrieval/: bm25_index.py  reranker.py  retriever.py
src/history_rag/store/: vectordb.py
